# vpn_task

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  start.sh
apps/users/: forms.py  middleware.py  models.py  urls.py  utils.py  views.py
project/: settings.py  urls.py
templates/: index.html
templates/auth/: login.html  registration.html
templates/dashboard/: create_site.html  dashboard.html  edit_profile.html
