[tool.poetry]
name = "vpn-task"
version = "0.1.0"
description = ""
authors = ["ArsenHrynevych <102324797+Arsen-hrynevych@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
